# zandev_textual_widgets

./: .gitignore  LICENCE  README.md  pyproject.toml  testapp.py
src/zandev_textual_widgets/: dialog.py  menu.py
zandev_textual_widgets/: __init__.py  dialog.py  menu.py
